# NeuroTrace

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  database.py  main.py  models.py
backend/api/: __init__.py  routes.py
backend/debugger/: __init__.py  sandbox.py  static_analyzer.py  trace_collector.py
backend/llm/: __init__.py  client.py  prompts.py  root_cause.py
backend/patcher/: __init__.py  generator.py
backend/validator/: __init__.py  runner.py
datasets/: bugs.json
evaluation/: __init__.py  benchmark_runner.py  metrics.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ConfidenceRing.jsx  DiffViewer.jsx  Header.jsx  Pipeline.jsx  ResultsPanel.jsx
tests/: __init__.py  test_api.py  test_evaluation.py  test_llm.py  test_sandbox.py  test_static_analyzer.py  test_trace_collector.py  test_validator.py
